# tgoskits

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md  release-plz.toml  test_aarch64.ps1  test_la64.ps1
.cargo/: config-app.toml  config-test.toml  config.toml
.github/workflows/: ci.yml  release-plz.yml  test.yml
apps/helloworld/: qemu-la64.toml
build-config/: loongarch64.toml
components/arm_pl011/: Cargo.toml
components/arm_pl031/: Cargo.toml
components/ax-lazyinit/: Cargo.toml
components/axallocator/: Cargo.toml
components/axconfig-gen/: Cargo.toml
components/axconfig-gen/axconfig-gen/: Cargo.toml
components/axconfig-gen/axconfig-macros/: Cargo.toml
components/axcpu/: Cargo.toml
components/axdriver_crates/: Cargo.toml  PUBLISH_ORDER.md  README.md
components/axdriver_crates/axdriver_base/: Cargo.toml
components/axdriver_crates/axdriver_display/: Cargo.toml
components/axdriver_crates/axdriver_display/src/: lib.rs
components/axdriver_crates/axdriver_input/: Cargo.toml
components/axdriver_crates/axdriver_pci/: Cargo.toml
components/axerrno/: Cargo.toml
components/axfs-ng-vfs/: Cargo.toml
components/axfs_crates/: Cargo.toml
components/axfs_crates/axfs_devfs/: Cargo.toml
components/axfs_crates/axfs_ramfs/: Cargo.toml
components/axfs_crates/axfs_vfs/: Cargo.toml
components/axio/: Cargo.toml
components/axmm_crates/: Cargo.toml
components/axplat_crates/: Cargo.toml  README.md  README_CN.md
components/axplat_crates/cargo-axplat/: Cargo.toml  README.md  README_CN.md
components/axsched/: Cargo.toml
components/axvisor_api/: Cargo.toml
components/axvm/: Cargo.toml
components/cap_access/: Cargo.toml
components/cpumask/: Cargo.toml
components/crate_interface/: Cargo.toml
components/ctor_bare/: Cargo.toml
components/ctor_bare/ctor_bare/: Cargo.toml
components/fxmac_rs/: Cargo.toml  README.md  README_CN.md
components/handler_table/: Cargo.toml
components/int_ratio/: Cargo.toml
components/kernel_guard/: Cargo.toml
components/kspin/: Cargo.toml
components/linked_list_r4l/: Cargo.toml
components/page_table_multiarch/: Cargo.toml
components/percpu/: Cargo.toml
components/percpu/percpu/: Cargo.toml
components/percpu/percpu_macros/: Cargo.toml
components/riscv_plic/: Cargo.toml
components/riscv_vcpu/: Cargo.toml
components/riscv_vplic/: Cargo.toml
components/rsext4/: Cargo.toml  README.md  README_CN.md
components/starry-process/: Cargo.toml
components/starry-signal/: Cargo.toml
components/starry-smoltcp/: Cargo.toml
components/timer_list/: Cargo.toml
components/x86_vcpu/: Cargo.toml
configs/board/: qemu-riscv64.toml
container/: Dockerfile
crates/dma-api/: Cargo.toml  README.md
crates/os-helper/: Cargo.toml
crates/page-table-generic/: Cargo.toml
crates/somehal/: Cargo.toml  build.rs
crates/sparreal-kernel/: Cargo.toml
docs/: arceos-concurrency-waitqueue-timer-race.md  arceos-internals.md  axvisor-internals.md  components.md  docusaurus.config.js  starryos-internals.md  starryos-linux-guest-oracle-pin.md  starryos-probes-ci-example.md  starryos-probes-daily.md  starryos-probes-matrix-failure-playbook.md  starryos-syscall-behavior-evidence.md  starryos-syscall-catalog.yaml  starryos-syscall-compat-matrix.yaml  starryos-syscall-probe-rollout.yaml  starryos-syscall-progress-rounds.md  starryos-syscall-s0-batch-summary.md  starryos-syscall-smp-notes.md  starryos-syscall-testing-method.md  test-suit-design.md  tgoskits-dependency.md
docs/community/: introduction.md  resources.md  support.md
docs/crates/: README.md  arceos-display.md  arceos-exception.md  arceos-fs-shell.md  arceos-net-echoserver.md  arceos-net-httpclient.md  arceos-net-httpserver.md  arceos-net-udpserver.md  arceos-tls.md  arceos_api.md  ax-alloc.md  ax-api.md  ax-display.md  ax-driver-base.md  ax-driver-virtio.md  ax-feat.md  ax-fs-ng.md  ax-hal.md  ax-helloworld-myplat.md  ax-helloworld.md  ax-httpclient.md  ax-httpserver.md  ax-input.md  ax-ipi.md  ax-libc.md  ax-log.md  ax-mm.md  ax-net-ng.md  ax-net.md  ax-plat-aarch64-bsta1000b.md  ax-plat-aarch64-peripherals.md  ax-plat-loongarch64-qemu-virt.md  ax-plat-riscv64-qemu-virt.md  ax-plat-x86-pc.md  ax-plat.md  ax-posix-api.md  ax-runtime.md  ax-shell.md  ax-std.md  ax-sync.md  (+18 more)
docs/docs/: arceos-guide.md  axvisor-guide.md  starryos-guide.md
os/StarryOS/: .gitignore  Cargo.toml
os/arceos/: .gitignore  (+3 more)
os/arceos/modules/axconfig/: Cargo.toml
os/arceos/modules/axdma/: Cargo.toml
os/arceos/modules/axdma/src/: dma.rs
os/arceos/modules/axinput/: Cargo.toml
os/arceos/modules/axinput/src/: lib.rs
scripts/: _materialize_badfd.py  _materialize_batch_c.py  _materialize_remaining_probes.py  _materialize_tbd_p1.py  bump_component_versions.py  check_compat_matrix.py  gen_crate_docs.py  gen_syscall_probes.py  materialize_syscall_batch.py  pack_probe_initrd.py  publish.py  run_linux_guest_oracle.sh  starryos-probes-ci.sh  verify_linux_guest_oracle.sh
test-suit/arceos/rust/task/concurrency_stress/: Cargo.toml
test-suit/arceos/rust/task/concurrency_stress/src/: main.rs
test-suit/axvisor/common/guestlib/: Cargo.toml
test-suit/axvisor/common/guestlib/src/: lib.rs  smp.rs
test-suit/axvisor/common/guestlib/src/sysreg/: mod.rs
test-suit/axvisor/common/guestlib/src/sysreg/arch/: aarch64.rs
test-suit/axvisor/common/guestlib/src/user_probe/: mod.rs
test-suit/axvisor/common/guestlib/src/user_probe/arch/: aarch64.rs
test-suit/axvisor/cpu-state/aarch64-currentel/: Cargo.toml  case.toml
test-suit/axvisor/cpu-state/aarch64-currentel/src/: main.rs
test-suit/axvisor/cpu-state/aarch64-currentel/vm/: aarch64.toml.in
test-suit/axvisor/cpu-state/aarch64-mpidr/: Cargo.toml  build-aarch64-unknown-none-softfloat.toml  case.toml
test-suit/axvisor/cpu-state/aarch64-mpidr/src/: main.rs
test-suit/axvisor/cpu-state/aarch64-mpidr/vm/: aarch64.toml.in
test-suit/axvisor/cpu-state/mpidr-multicore-read/: Cargo.toml  case.toml
test-suit/axvisor/cpu-state/mpidr-multicore-read/src/: main.rs
test-suit/axvisor/cpu-state/mpidr-multicore-read/vm/: aarch64.toml.in
(+688 files in other folders)
