[package]
name = "ax-arm-pl031"
version = "0.4.1"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2021"
authors = ["Keyang Hu <keyang.hu@qq.com>"]
description = "System Real Time Clock (RTC) Drivers for aarch64 based on PL031."
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
keywords = ["arceos", "aarch64", "rtc", "pl031"]
categories = ["os", "hardware-support", "no-std"]

[dependencies]
chrono = { version = "0.4.38", default-features = false, optional = true }

[features]
chrono = ["dep:chrono"]
default = ["chrono"]
