[workspace]
resolver = "2"

members = [
    "axconfig-gen",
    "axconfig-macros",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
repository = "https://github.com/rcore-os/tgoskits"
keywords = ["arceos", "config", "toml"]
rust-version = "1.76"
