[workspace]
resolver = "2"

members = [
    "axfs_vfs",
    "ax-fs-devfs",
    "ax-fs-ramfs",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
repository = "https://github.com/rcore-os/tgoskits"
categories = ["os", "no-std", "filesystem"]

[workspace.dependencies]
ax-fs-vfs = { path = "axfs_vfs", version = "0.3.2" }
