[package]
name = "ax-sched"
version = "0.5.1"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "guoweikang <guoweikang.kernel@gmail.com>",
]
description = "Various scheduler algorithms in a unified interface"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
rust-version = "1.76"

[dependencies]
ax-linked-list-r4l = "0.5.0"
