[package]
name = "ax-cap-access"
version = "0.3.0"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Provide basic capability-based access control to objects"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
keywords = ["arceos", "capabilities", "permission", "access-control"]
categories = ["os", "no-std"]

[dependencies]
bitflags = "2.6"
