[workspace]
resolver = "2"

members = [
    "percpu",
    "percpu_macros",
]

[workspace.package]
version = "0.4.3"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "hky1999 <976929993@qq.com>",
    "Su Mingxian <aarkegz@gmail.com>",
    "yufeng <321353225@qq.com>",
]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
repository = "https://github.com/rcore-os/tgoskits"
keywords = ["arceos", "percpu"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]
rust-version = "1.66"
