[package]
name = "ax-driver-base"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Common interfaces for all kinds of device drivers"
keywords = ["arceos", "driver"]
license.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
