[package]
name = "ax-driver-display"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Common traits and types for graphics device drivers"
keywords = ["arceos", "driver", "gpu", "framebuffer"]
license.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ax-driver-base = { version = "0.3.4" }
