[package]
name = "ax-driver-input"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Common traits and types for input device drivers"
keywords = ["arceos", "driver", "input"]
license.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ax-driver-base = { version = "0.3.4" }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
