[package]
name = "ax-driver-pci"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Structures and functions for PCI bus operations"
keywords = ["arceos", "driver", "pci"]
license.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
virtio-drivers = "0.7.4"
