[package]
name = "ax-ctor-bare"
edition.workspace = true
description = "Register constructor functions for Rust at complie time under no_std."
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ax-ctor-bare-macros = { version = "0.4.1", path = "../ctor_bare_macros" }
