[package]
name = "ax-config"
version.workspace = true
repository = "https://github.com/rcore-os/tgoskits"
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Platform-specific constants and parameters for ArceOS"
license.workspace = true
include = ["src/**/*", "build.rs", "dummy.toml", "Cargo.toml", "README.md"]

[dependencies]
ax-config-macros = "0.4.1"
const-str = { version = "1.1", optional = true }

[features]
default = []
plat-dyn = ["dep:const-str"]
