[package]
name = "ax-dma"
edition.workspace = true
version.workspace = true
repository = "https://github.com/rcore-os/tgoskits"
authors = ["Zhour Rui <zrufo747@outlook.com>"]
description = "ArceOS global DMA allocator"
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
buddy-slab = ["dep:buddy-slab-allocator"]

[dependencies]
ax-alloc.workspace = true
ax-allocator.workspace = true
ax-config.workspace = true
ax-hal.workspace = true
ax-mm.workspace = true
buddy-slab-allocator = { workspace = true, optional = true }
ax-kspin.workspace = true
log.workspace = true
ax-memory-addr.workspace = true
