[package]
name = "ax-input"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
description = "Input device management for ArceOS"
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ax-driver = { workspace = true, features = ["input"] }
ax-sync = { workspace = true }

ax-lazyinit = { workspace = true }
log = { workspace = true }
