[package]
name = "axvisor-aarch64-currentel"
version = "0.1.0"
edition.workspace = true

[features]
ax-std = [
    "dep:ax-std",
    "ax-std/alloc",
    "ax-std/paging",
    "ax-std/uspace",
    "axvisor-guestlib/ax-std",
]

[dependencies]
ax-std = { workspace = true, optional = true }
ax-memory-addr.workspace = true
ax-mm = { workspace = true, features = ["copy"] }
axvisor-guestlib = { path = "../../common/guestlib" }
