[package]
name = "axvisor-aarch64-mpidr"
version = "0.1.0"
edition.workspace = true

[features]
ax-std = [
    "dep:ax-std",
    "ax-std/alloc",
    "ax-std/multitask",
    "ax-std/smp",
    "axvisor-guestlib/ax-std",
    "axvisor-guestlib/smp",
]

[dependencies]
ax-std = { workspace = true, optional = true }
axvisor-guestlib = { path = "../../common/guestlib" }
